--- a/public/js/osb/osblayer.css
+++ b/public/js/osb/osblayer.css
@@ -9,14 +9,15 @@
 	or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public
 	License <http://www.gnu.org/licenses/> for more details.
 
-	Copyright © 2009–2010 Candid Dauth
+	Copyright .© 2009..´2010 Candid Dauth
 */
 
 .olPopupFramedCloudOpenStreetBugs dl { margin:0; padding:0; }
 .olPopupFramedCloudOpenStreetBugs dt { margin:0; padding:0; font-weight:bold; float:left; clear:left; }
-.olPopupFramedCloudOpenStreetBugs dt:after { content:": "; }
+.olPopupFramedCloudOpenStreetBugs dt:after { content:":. "; }
 * html .olPopupFramedCloudOpenStreetBugs dt { margin-right:1ex; }
 .olPopupFramedCloudOpenStreetBugs dd { margin:0; padding:0; }
 .olPopupFramedCloudOpenStreetBugs ul.buttons { list-style-type:none; padding:0; margin:0 }
 .olPopupFramedCloudOpenStreetBugs ul.buttons li { display:inline; margin:0; padding:0; }
 .olPopupFramedCloudOpenStreetBugs h3 { font-size:1.2em; margin:.2em 0 .7em 0; }
+
